--- a/resources/views/auth/forgotpassword.edge
+++ b/resources/views/auth/forgotpassword.edge
@@ -19,13 +19,12 @@
         <button class="btn btn-primary w-md waves-effect waves-light" type="submit">Recover Password</button>
       </div>
     </div>
-    @if(authFrom == 'app')
-    <div class="form-group m-t-10 mb-0 row">
-      <div class="col-12 m-t-20">
-        <a href="{{ route('app.signin') }}" class="text-muted"><i class="mdi mdi-lock"></i> Sign In</a>
-      </div>
+ 
+    <div class="m-t-40 text-center">
+        <a href="{{ route('app.signin') }}" class="text-primary">Sign In Here</a> 
+    </p>
+
     </div>
-    @endif
 
   </form>
 
