--- a/resources/views/includes/admin_navigation.edge
+++ b/resources/views/includes/admin_navigation.edge
@@ -2,7 +2,7 @@
     <li><a href="{{ route('admin.dashboard') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Dashboard</span></a></li>
     <li><a href="{{ route('admin.plans.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Plans</span></a></li>
     <li><a href="{{ route('admin.packages.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Packages</span></a></li>
-    <li><a href="{{ route('admin.dashboard') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Evidences</span></a></li>
+    <li><a href="{{ route('admin.deposits.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Deposits</span></a></li>
     <li><a href="{{ route('admin.supports.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Support </span></a></li>
     <li><a href="{{ route('admin.announcements.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Announcements</span></a></li>
     <!-- <li><a href="{{ route('admin.dashboard') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Messages</span></a></li> -->
