--- a/resources/views/app/dashboard.edge
+++ b/resources/views/app/dashboard.edge
@@ -5,7 +5,7 @@
 @section('content')
 <div class="row">
     <div class="col-sm-12">
-      <div class="page-title-box">
+      <div class="page-title-box pb-0">
         <h4 class="page-title">Dashboard</h4>
         <ol class="breadcrumb">
         </ol>
@@ -17,7 +17,7 @@
     <div class="col-xl-4 col-md-6">
       <div class="card mini-stat bg-primary">
         <div class="card-body mini-stat-img">
-          <div class="mini-stat-icon"><i class="mdi mdi-cube-outline float-right"></i></div>
+          <div class="mini-stat-icon"><i class="mdi mdi-wallet float-right"></i></div>
           <div class="text-white">
             <h6 class="text-uppercase mb-3">Wallet</h6>
             <h4 class="mb-4">{{{ moneyFormat(auth.user.wallet) }}}</h4>
@@ -28,9 +28,9 @@
     <div class="col-xl-4 col-md-6">
         <div class="card mini-stat bg-primary">
           <div class="card-body mini-stat-img">
-            <div class="mini-stat-icon"><i class="mdi mdi-cube-outline float-right"></i></div>
+            <div class="mini-stat-icon"><i class="mdi mdi-cash float-right"></i></div>
             <div class="text-white">
-              <h6 class="text-uppercase mb-3">Packages</h6>
+              <h6 class="text-uppercase mb-3">Total Invested</h6>
               <h4 class="mb-4">{{{ moneyFormat(auth.user.wallet) }}}</h4>
             </div>
           </div>
@@ -39,10 +39,10 @@
       <div class="col-xl-4 col-md-6">
           <div class="card mini-stat bg-primary">
             <div class="card-body mini-stat-img">
-              <div class="mini-stat-icon"><i class="mdi mdi-cube-outline float-right"></i></div>
+              <div class="mini-stat-icon"><i class="mdi mdi-cash-multiple float-right"></i></div>
               <div class="text-white">
-                <h6 class="text-uppercase mb-3">Withdrawals</h6>
-                <h4 class="mb-4">{{{ moneyFormat(auth.user.wallet) }}}</h4>
+                <h6 class="text-uppercase mb-3">Total Withdrawals</h6>
+                <h4 class="mb-4">{{{ moneyFormat(totalWithdrawals) }}}</h4>
               </div>
             </div>
           </div>
