--- a/resources/views/app/faqs/index.edge
+++ b/resources/views/app/faqs/index.edge
@@ -4,7 +4,7 @@
 @endsection
 @section('content')
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 mt20">
       <!-- <div class="card support-pane-card"> -->
        
         <div class="card-body">
