--- a/resources/views/app/packages/choose.edge
+++ b/resources/views/app/packages/choose.edge
@@ -41,7 +41,7 @@ New Package
 
   @each(payment in ['Paystack', 'Bank Deposit'])
     <div class="col-xl-6 col-md-6">
-      <div class="card choose-payment" data-method="{{ payment }}">
+      <div class="card choose-payment cursor" data-method="{{ payment }}">
         <div class="card-body">
           <h6>{{ payment }}</h6>
         </div><!-- end row -->
@@ -53,7 +53,7 @@ New Package
     <input type="hidden" name="plan_id" id="plan_id">
     <input type="hidden" name="method" id="method">
     {{ csrfField() }}
-  <button type="submit" class="btn btn-primary btn-block btn-lg">Proceed</button>
+  <button type="submit" class="btn btn-primary btn-block btn-lg cursor">Proceed</button>
 </form>
 @endsection
 
