--- a/resources/views/app/packages/index.edge
+++ b/resources/views/app/packages/index.edge
@@ -5,7 +5,7 @@ Packages
 @section('content')
 
 <div class="row">
-  <div class="col-md-12 grid-margin stretch-card">
+  <div class="col-md-12 grid-margin stretch-card mt20">
     <!-- <div class="card"> -->
       <div class="card-body">
         <div class="d-flex align-items-center justify-content-between pb-4">
@@ -17,21 +17,19 @@ Packages
         <div class="row">
           @each(package in packages)
           <div class="col-xs-6 col-sm-6 col-md-3 grid-margin stretch-card card-tile ">
-            <a href="{{ route('app.investment.show', {id: investment.id}) }}">
+            <a href="{{ route('app.packages.show', {id: package.id}) }}">
                 <div class="card">
                 <div class="card-body">
                     <div class="d-flex justify-content-between pb-2">
-                    <h5>{{{ moneyFormat(package.plan.capital) }}}</h5>
-
+                    <h5 class="m0">{{{ moneyFormat(package.plan.capital) }}}</h5>
                     <i> {{ package.plan.interest }}%</i>
-                    
                     </div>
                     <div class="d-flex justify-content-between">
-                    <p class="text-muted">{{ package.fullStatus.label }}</p>
-                    <p class="text-muted">Day: {{package.__meta__.payments_count}}</p>
+                    <p class="text-muted"><span class="btn btn-sm btn-{{ package.fullStatus.class }}">{{ package.fullStatus.label }}</span></p>
+                    <p class="text-muted">Payments: {{package.__meta__.payments_count}}</p>
                     </div>
                     <div class="progress progress-md">
-                    <div class="progress-bar bg-{{ investment.fullStatus.class }}" style="width: {{ package.__meta__.payments_count / package.plan.duration * 100 }}%" role="progressbar" aria-valuenow="{{ package.percentage }}" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-{{ package.fullStatus.class }}" style="width: {{ package.__meta__.payments_count / package.plan.duration * 100 }}%" role="progressbar" aria-valuenow="{{ package.percentage }}" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
                 </div>
