fixed first wave of bugs

--- a/resources/views/admin/users/show.edge
+++ b/resources/views/admin/users/show.edge
@@ -4,6 +4,7 @@
 @endsection 
 @section('content')
 <div class="row">
+  TODO: User include Bank Details
   <div class="col-md-12">
     <div class="card support-pane-card">
       <div class="card-body">
@@ -68,4 +69,5 @@
     </div>
   </div>
 </div>
+
 @endsection
