--- a/resources/views/crud/index.edge
+++ b/resources/views/crud/index.edge
@@ -104,7 +104,7 @@
 
                   @if(hasEdit)
                   <a href="{{ route(resourceRoute + '.edit', {id : data.id}) }}" class="btn btn-primary btn-xs">
-                    <i class="icon-pencil"></i> Edit
+                    <i class="icon-pencil"></i> {{ editText }}
                   </a>
                   @endif
                   
