--- a/resources/views/includes/admin_navigation.edge
+++ b/resources/views/includes/admin_navigation.edge
@@ -12,6 +12,7 @@
     <li><a href="{{ route('admin.withdrawals.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Withdrawals</span></a></li>
     <li><a href="{{ route('admin.references.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> References</span></a></li>
     <li><a href="{{ route('admin.banks.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Banks</span></a></li>
+    <li><a href="{{ route('admin.bankoptions.index') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Bank Options</span></a></li>
     <!-- <li><a href="{{ route('admin.dashboard') }}" class="waves-effect"><i class="mdi mdi-calendar-check"></i><span> Referrals</span></a></li> -->
   </ul>
   
