--- a/resources/views/templates/auth.edge
+++ b/resources/views/templates/auth.edge
@@ -21,7 +21,7 @@
   <div class="wrapper-page">
     <div class="card">
       <div class="card-body">
-        <h3 class="text-center m-0"><a href="index.html" class="logo logo-admin"><img src="/assets/images/logo.png" height="30" alt="logo"></a></h3>
+        <h3 class="text-center m-0"><a href="/" class="logo logo-admin"><img src="/assets/images/logo.png" height="30" alt="logo"></a></h3>
         <h4 class="text-muted font-18 m-b-5 text-center">
           @!section('title')
         </h4>
