--- a/resources/views/crud/edit.edge
+++ b/resources/views/crud/edit.edge
@@ -1,6 +1,6 @@
 @layout('templates.main')
 @section('title')
-  Edit {{ singleItem }}
+  {{ editText }} {{ singleItem }}
 @endsection
 @section('content')
 
@@ -9,7 +9,7 @@
     <div class="card support-pane-card">
       <div class="card-body">
         <div class="d-flex justify-content-between align-items-center mb-3">
-          <h4 class="card-title mb-0">Edit {{ singleItem }}</h4>
+          <h4 class="card-title mb-0">{{ editText }} {{ singleItem }}</h4>
         </div>
         <form class="forms-sample" method="POST" action="{{ route(resourceRoute + '.update', {id : resourceDatum.id}) }}?_method=PUT">
           {{ csrfField() }}
